[package]
name = "animation-replace-roblox"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
# tokio = "1.45.1"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
roboat = { git = "https://github.com/Flaried/roboat-extras.git", branch = "main" }
rbx_dom_weak = "3.0.0"
rbx_binary = "1.0.0"
ustr = "1.1.0"
rbx_types = "2.0.0"

